// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LanguagesForm > calls onUpdate on submit > LanguagesForm - with onUpdate 1`] = `
<div>
  <div
    class="group cursor-pointer border border-transparent hover:border-(--color-hover-border) duration-300 hover:bg-(--color-hover-alt) rounded-xl p-4"
  >
    <div
      class="grid min-h-11 w-full grid-cols-1 items-start gap-y-2 duration-300"
    >
      <div
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated flex items-center gap-3 css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
      >
        languages.label
         
      </div>
      <div
        class="flex justify-between"
      >
        <ul
          class="flex w-full flex-col gap-(--default-gap)"
        >
          <li
            class="flex items-center gap-1"
          >
            <span
              class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-15tds78-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
              >
                ENG
              </span>
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pucm0b-MuiTypography-root"
            >
              English
               (
              original
              )
            </p>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium ml-auto opacity-0 group-hover:opacity-100 css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="DeleteOutlineIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM8 9h8v10H8zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </li>
        </ul>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium opacity-0 group-hover:opacity-100 mt-1.5 xl:mt-0 css-1rio2pg-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="EditIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`LanguagesForm > renders empty state > LanguagesForm - empty 1`] = `
<div>
  <div
    class="group cursor-pointer border border-transparent hover:border-(--color-hover-border) duration-300 hover:bg-(--color-hover-alt) rounded-xl p-4"
  >
    <div
      class="grid min-h-11 w-full grid-cols-1 items-start gap-y-2 duration-300"
    >
      <div
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated flex items-center gap-3 css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
      >
        languages.label
         
      </div>
      <div
        class="flex justify-between"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary mr-2 w-full justify-between p-0 css-zmd0ac-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="flex gap-1 flex-row"
          >
            <span>
              actions.add
            </span>
            <span>
              language.label
            </span>
          </span>
          <span
            class="MuiButton-icon MuiButton-endIcon MuiButton-iconSizeMedium css-1wyk03i-MuiButton-endIcon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium opacity-0 group-hover:opacity-100 css-1umw9bq-MuiSvgIcon-root"
              data-testid="AddIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`LanguagesForm > renders snapshot > LanguagesForm 1`] = `
<div>
  <div
    class="group cursor-pointer border border-transparent hover:border-(--color-hover-border) duration-300 hover:bg-(--color-hover-alt) rounded-xl p-4"
  >
    <div
      class="grid min-h-11 w-full grid-cols-1 items-start gap-y-2 duration-300"
    >
      <div
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated flex items-center gap-3 css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
      >
        languages.label
         
      </div>
      <div
        class="flex justify-between"
      >
        <ul
          class="flex w-full flex-col gap-(--default-gap)"
        >
          <li
            class="flex items-center gap-1"
          >
            <span
              class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-15tds78-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
              >
                ENG
              </span>
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-pucm0b-MuiTypography-root"
            >
              English
               (
              original
              )
            </p>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium ml-auto opacity-0 group-hover:opacity-100 css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="DeleteOutlineIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM8 9h8v10H8zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </li>
        </ul>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium opacity-0 group-hover:opacity-100 mt-1.5 xl:mt-0 css-1rio2pg-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="EditIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
